--- a/css/stylus/medium/layout.styl
+++ b/css/stylus/medium/layout.styl
@@ -1,3 +1,7 @@
+// page
+html, body
+	height 100%
+	width 100%
 // layout
 .container
 	& *
@@ -17,3 +21,6 @@
 		& *
 			margin 0
 			text-align left
+	@media all and (max-width: 800px)
+		&.responsive
+			flex-direction column
